--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "xuxusheng <20691718@qq.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p ./"
+    "start:relink": "node dist/relink",
+    "build": "rimraf ./dist && tsc -p ./"
   },
   "dependencies": {
     "prettier": "^1.16.4",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@types/shelljs": "^0.8.3",
+    "rimraf": "^2.6.3",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000"
   }
